Added share all games and improved exports

--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -214,7 +214,10 @@
                     android:id="@+id/tvRankingDialogBestHandTitle"
                     style="@style/tvRankingDialogOthers"
                     android:textSize="16sp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/standard_margin"
+                    android:gravity="end"
                     tools:text="@string/best_hand" />
 
                 <TextView
