--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -187,93 +187,84 @@
 
         </TableRow>
 
-        <TableRow style="@style/TableRowRankingDialog">
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="12"
-                android:background="@color/grayLight" />
-        </TableRow>
-
-        <TableRow style="@style/TableRowRankingDialog">
-
-            <View
-                style="@style/tvRankingDialogOthers"
-                android:layout_height="0dp"
-                android:layout_weight="2" />
-
-            <LinearLayout
-                style="@style/tvRankingDialogOthers"
-                android:layout_weight="10"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvRankingDialogBestHandTitle"
-                    style="@style/tvRankingDialogOthers"
-                    android:textSize="16sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/standard_margin"
-                    android:gravity="end"
-                    tools:text="@string/best_hand" />
-
-                <TextView
-                    android:id="@+id/tvRankingDialogBestHandPlayerPoints"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.5"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="end"
-                    android:maxLines="1"
-                    android:textColor="@color/grayMM"
-                    tools:ignore="HardcodedText"
-                    tools:text="119" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight=".5"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:textColor="@color/grayMM"
-                    tools:ignore="HardcodedText"
-                    android:text="-" />
-
-                <TextView
-                    android:id="@+id/tvRankingDialogBestHandPlayerName"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:textColor="@color/grayMM"
-                    tools:ignore="HardcodedText"
-                    tools:text="Juanito" />
-
-            </LinearLayout>
-
-            <View
-                style="@style/tvRankingDialogOthers"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-        </TableRow>
-
     </TableLayout>
+
+    <View
+        android:id="@+id/vGameRankingDialogSeparator1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/tlRanking"
+        android:layout_margin="@dimen/standard_margin"
+        android:background="@color/gray" />
+
+    <LinearLayout
+        android:id="@+id/llRankingDialogBestHand"
+        style="@style/tvRankingDialogOthers"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/vGameRankingDialogSeparator1"
+        android:layout_marginEnd="@dimen/standard_margin"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvRankingDialogBestHandTitle"
+            style="@style/tvRankingDialogOthers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textSize="16sp"
+            tools:text="@string/best_hand" />
+
+        <TextView
+            android:id="@+id/tvRankingDialogBestHandPlayerPoints"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/second_standard_margin"
+            android:ellipsize="end"
+            android:gravity="end"
+            android:maxLines="1"
+            android:textColor="@color/grayMM"
+            tools:ignore="HardcodedText"
+            tools:text="119" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="-"
+            android:textColor="@color/grayMM"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/tvRankingDialogBestHandPlayerName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textColor="@color/grayMM"
+            tools:ignore="HardcodedText"
+            tools:text="Juanito nombre largo" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/vGameRankingDialogSeparator2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/llRankingDialogBestHand"
+        android:layout_margin="@dimen/standard_margin"
+        android:background="@color/gray" />
 
     <Button
         android:id="@+id/btRankingDialogResume"
         style="?android:buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tlRanking"
+        android:layout_below="@+id/vGameRankingDialogSeparator2"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/standard_margin"
+        android:layout_marginStart="@dimen/standard_and_half_margin"
         android:layout_marginTop="@dimen/standard_margin"
         android:text="@string/resume" />
 
@@ -282,7 +273,7 @@
         style="?android:buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tlRanking"
+        android:layout_below="@+id/vGameRankingDialogSeparator2"
         android:layout_marginTop="@dimen/standard_margin"
         android:layout_toStartOf="@+id/btRankingDialogOk"
         android:text="@string/share" />
@@ -292,9 +283,12 @@
         style="?android:buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tlRanking"
+        android:layout_below="@+id/vGameRankingDialogSeparator2"
         android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/standard_margin"
+        android:layout_marginStart="@dimen/standard_margin"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:layout_marginEnd="@dimen/standard_margin"
+        android:layout_marginBottom="@dimen/standard_margin"
         android:text="@string/ok" />
 
 </RelativeLayout>
