--- a/app/src/main/res/layout/game_list_round_item.xml
+++ b/app/src/main/res/layout/game_list_round_item.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/tvGameListItemHandPoints"
-                android:src="@drawable/ic_trophy"
+                android:src="@drawable/ic_trophy_golden"
                 android:visibility="gone"
                 app:tint="@color/golden"
                 tools:ignore="ContentDescription"
