--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -49,7 +49,7 @@
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="2"
                 android:contentDescription="@string/_1st"
-                android:src="@drawable/ic_trophy"
+                android:src="@drawable/ic_trophy_golden"
                 app:tint="@color/golden" />
 
             <TextView
