--- a/app/src/main/res/layout/combinations_fragment.xml
+++ b/app/src/main/res/layout/combinations_fragment.xml
@@ -20,7 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context=".app.main.combinations.CombinationsActivity">
+    tools:context=".app.main.combinations.CombinationsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
