--- a/app/src/main/res/menu/empty_menu.xml
+++ b/app/src/main/res/menu/empty_menu.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright © 2023  Ernesto Vega de la Iglesia Soria
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~     Copyright © 2024  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -15,13 +14,5 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <color android:color="@color/grayLight" />
-    </item>
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/mm_logo_256" />
-    </item>
-</layer-list>
+
+<menu/>
