--- a/app/src/main/res/layout/diffs_calculator_fragment.xml
+++ b/app/src/main/res/layout/diffs_calculator_fragment.xml
@@ -21,7 +21,7 @@
     android:layout_height="match_parent"
     android:background="@color/gray"
     android:orientation="vertical"
-    tools:context=".app.main.diffs_calculator.DiffsCalculatorFragment">
+    tools:context=".app.screens.diffs_calculator.DiffsCalculatorFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
