--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,7 +21,7 @@
     android:id="@+id/drawerLayoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.main.activity.MainActivity"
+    tools:context=".app.screens.MainActivity"
     tools:openDrawer="start">
 
     <FrameLayout
