--- a/app/src/main/res/layout/main_oldgames_fragment.xml
+++ b/app/src/main/res/layout/main_oldgames_fragment.xml
@@ -20,7 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grayLight"
-    tools:context=".app.main.old_games.OldGamesFragment"
+    tools:context=".app.screens.old_games.OldGamesFragment"
     tools:ignore="Overdraw">
 
     <com.google.android.material.appbar.AppBarLayout
