--- a/app/src/main/res/layout/custom_table_seat_north.xml
+++ b/app/src/main/res/layout/custom_table_seat_north.xml
@@ -16,34 +16,34 @@
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rlTableSeatWestContainer"
+    android:id="@+id/rlTableSeatNorthContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ivTableSeatWestSeatWindIcon"
+        android:id="@+id/ivTableSeatNorthSeatWindIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_west" />
+        tools:src="@drawable/ic_north" />
 
     <TextView
-        android:id="@+id/tvTableSeatWestPoints"
+        android:id="@+id/tvTableSeatNorthPoints"
         style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
+        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/table_player_points_text_size"
         tools:text="-000" />
 
     <TextView
-        android:id="@+id/tvTableSeatWestPenaltyPoints"
+        android:id="@+id/tvTableSeatNorthPenaltyPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatWestPoints"
+        android:layout_below="@+id/tvTableSeatNorthPoints"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-8dp"
         android:textSize="@dimen/table_player_penalty_points_text_size"
@@ -53,35 +53,36 @@
         tools:visibility="visible" />
 
     <View
-        android:id="@+id/vGameTableSeatWestAuxStart"
+        android:id="@+id/vGameTableSeatNorthAuxStart"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatWestName"
-        android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
-        android:layout_toStartOf="@+id/tvTableSeatWestPoints" />
+        android:layout_above="@+id/tvTableSeatNorthName"
+        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
+        android:layout_toStartOf="@+id/tvTableSeatNorthPoints" />
 
     <View
-        android:id="@+id/vGameTableSeatWestAuxEnd"
+        android:id="@+id/vGameTableSeatNorthAuxEnd"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatWestName"
-        android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
+        android:layout_above="@+id/tvTableSeatNorthName"
+        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@+id/tvTableSeatWestPoints" />
+        android:layout_toEndOf="@+id/tvTableSeatNorthPoints" />
 
     <TextView
-        android:id="@+id/tvTableSeatWestName"
+        android:id="@+id/tvTableSeatNorthName"
         style="@style/TextViewTableSeat"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatWestPenaltyPoints"
+        android:layout_below="@+id/tvTableSeatNorthPenaltyPoints"
         android:layout_centerHorizontal="true"
-        android:ellipsize="end" />
+        android:ellipsize="end"
+        tools:text="@string/player_name_placeholder" />
 
     <include
-        android:id="@+id/iGameTableSeatWestDiffs"
-        layout="@layout/game_table_seat_diffs"
+        android:id="@+id/iGameTableSeatNorthDiffs"
+        layout="@layout/custom_diffs_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatWestName"
+        android:layout_below="@+id/tvTableSeatNorthName"
         android:layout_centerHorizontal="true"
         android:visibility="gone"
         tools:visibility="visible" />
