--- a/app/src/main/res/layout/custom_table_seat_south.xml
+++ b/app/src/main/res/layout/custom_table_seat_south.xml
@@ -16,34 +16,34 @@
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rlTableSeatNorthContainer"
+    android:id="@+id/rlTableSeatSouthContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ivTableSeatNorthSeatWindIcon"
+        android:id="@+id/ivTableSeatSouthSeatWindIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_north" />
+        tools:src="@drawable/ic_south" />
 
     <TextView
-        android:id="@+id/tvTableSeatNorthPoints"
+        android:id="@+id/tvTableSeatSouthPoints"
         style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
+        android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/table_player_points_text_size"
         tools:text="-000" />
 
     <TextView
-        android:id="@+id/tvTableSeatNorthPenaltyPoints"
+        android:id="@+id/tvTableSeatSouthPenaltyPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatNorthPoints"
+        android:layout_below="@+id/tvTableSeatSouthPoints"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-8dp"
         android:textSize="@dimen/table_player_penalty_points_text_size"
@@ -53,36 +53,36 @@
         tools:visibility="visible" />
 
     <View
-        android:id="@+id/vGameTableSeatNorthAuxStart"
+        android:id="@+id/vGameTableSeatSouthAuxStart"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatNorthName"
-        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
-        android:layout_toStartOf="@+id/tvTableSeatNorthPoints" />
+        android:layout_above="@+id/tvTableSeatSouthName"
+        android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
+        android:layout_toStartOf="@+id/tvTableSeatSouthPoints" />
 
     <View
-        android:id="@+id/vGameTableSeatNorthAuxEnd"
+        android:id="@+id/vGameTableSeatSouthAuxEnd"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatNorthName"
-        android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
+        android:layout_above="@+id/tvTableSeatSouthName"
+        android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@+id/tvTableSeatNorthPoints" />
+        android:layout_toEndOf="@+id/tvTableSeatSouthPoints" />
 
     <TextView
-        android:id="@+id/tvTableSeatNorthName"
+        android:id="@+id/tvTableSeatSouthName"
         style="@style/TextViewTableSeat"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatNorthPenaltyPoints"
+        android:layout_below="@+id/tvTableSeatSouthPenaltyPoints"
         android:layout_centerHorizontal="true"
         android:ellipsize="end"
         tools:text="@string/player_name_placeholder" />
 
     <include
-        android:id="@+id/iGameTableSeatNorthDiffs"
-        layout="@layout/game_table_seat_diffs"
+        android:id="@+id/iGameTableSeatSouthDiffs"
+        layout="@layout/custom_diffs_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatNorthName"
+        android:layout_below="@+id/tvTableSeatSouthName"
         android:layout_centerHorizontal="true"
         android:visibility="gone"
         tools:visibility="visible" />
