--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -20,9 +20,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".app.screens.MainActivity"
-    tools:openDrawer="end">
+    tools:context=".app.screens.game.GameFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -54,7 +52,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.viewpager.widget.ViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPagerGame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
